updates based on github comments: combine Config and Centroid class, use Tests instead of Demo

--- a/dot-net/Centroid/Centroid.csproj
+++ b/dot-net/Centroid/Centroid.csproj
@@ -44,8 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Centroid.cs" />
-    <Compile Include="Helper.cs" />
+    <Compile Include="Config.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
