Move test project to folder of same name

--- a/dot-net/Centroid.Tests/Centroid.Tests.csproj
+++ b/dot-net/Centroid.Tests/Centroid.Tests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{1013212A-F25A-4318-9A50-E3E0E083FD33}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Centroid.Test</RootNamespace>
-    <AssemblyName>Test</AssemblyName>
+    <RootNamespace>Centroid.Tests</RootNamespace>
+    <AssemblyName>Centroid.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -50,7 +50,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="CentroidTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
