--- a/dot-net/Centroid.Tests/Centroid.Tests.csproj
+++ b/dot-net/Centroid.Tests/Centroid.Tests.csproj
@@ -50,7 +50,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="CentroidTest.cs" />
+    <Compile Include="ConfigTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
