Does Travis cache the VMs that it spins up?
Let's find out

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ env:
   - MONO_VERSION="3.2.6"
 
 before_install:
- - wget "http://download.xamarin.com/MonoFrameworkMDK/Macx86/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg"
- - sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg" -target /
+ - [ -e xbuild ] && wget "http://download.xamarin.com/MonoFrameworkMDK/Macx86/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg"
+ - [ -e xbuild ] && sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg" -target /
  - sudo gem install bundler
  - sudo bundle install
 
