--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 python/build/
 python/dist/
 python/MANIFEST
+python/.ropeproject/
 
 obj
 bin
@@ -22,3 +23,4 @@ Gemfile.lock
 .bundle
 *.gem
 .ruby-version
+
