Improve property casting
Implement Newtonsoft object conversion (`JToken.ToObject<T>`) in
`TryConvert` instead of utilizing CLR `Convert.ChangeType`.  This allows
the client using the `Config` object to simply bind to the desired type.

```cs
dynamic typedConfig = Config; //Config is of type Centroid.Config
MyCustomClass classPropertyValue = typedConfig.customClass;
//this will use JToken's inherent conversion techniques
```

Also added two Unit Tests to ensure casting functionality is functional.

--- a/dot-net/Centroid.Tests/Centroid.Tests.csproj
+++ b/dot-net/Centroid.Tests/Centroid.Tests.csproj
@@ -10,7 +10,7 @@
     <AssemblyName>Centroid.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
- </PropertyGroup>
+  </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
@@ -47,6 +47,9 @@
       <Project>{bb414384-cd9b-42dc-93b7-8582887ce2f1}</Project>
       <Name>Centroid</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
