Fix travis-ci integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
-language: objective-c
+os:
+  - osx
 
-env:
- matrix:
-  - MONO_VERSION="3.2.6"
+matrix:
+  include:
+    dotnet: 1.0.0-preview2-003131
+    mono: none
+    env: DOTNETCORE=1
 
 before_install:
- - wget "http://download.xamarin.com/MonoFrameworkMDK/Macx86/MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg"
- - sudo installer -pkg "MonoFramework-MDK-${MONO_VERSION}.macos10.xamarin.x86.pkg" -target /
  - sudo gem install bundler
  - sudo bundle install
 
